--- a/Front-End_Decretos_Higiene y Seguridad/index.html
+++ b/Front-End_Decretos_Higiene y Seguridad/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DECRETOS DE HIGIENE Y SEGURIDAD</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <nav class = "menu">
